--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,10 @@ development:
   database: expense_tracker_grape_development
 
 test:
-  <<: *default
-  database: expense_tracker_grape_test
+  adapter: mysql2
+  database: myapp_test
+  username: root
+  encoding: utf8
 
 production:
   <<: *default
